style: 统一About和Contact页面配色为深色主题
🎨 设计优化：
- 参考Voice页面的深色风格
- 将所有卡片背景改为深色主题
- 保持全站视觉风格一致

📝 配色方案：
- 卡片背景：#0e1424（深蓝黑色）
- 边框颜色：#2a3a57（深蓝灰色）
- 标题文字：#e5e7eb（浅灰白色）
- 正文文字：#aab4d4（柔和蓝灰色）
- 链接颜色：#667eea（品牌紫色）

✨ 更新内容：

About页面：
- ✅ 核心价值卡片（4个）改为深色
- ✅ 产品特色卡片（2个）改为深色
- ✅ 添加边框增强层次感

Contact页面：
- ✅ 联系方式卡片（3个）改为深色
- ✅ 服务范围区域改为深色
- ✅ 保留渐变背景的响应承诺区域

🎯 效果：
- ✅ 与Voice页面风格完全一致
- ✅ 深色主题更显专业和现代
- ✅ 提升整体品牌形象
- ✅ 减少视觉疲劳
- ✅ 全站配色统一协调

💡 设计理念：
- 深色背景突出内容
- 柔和的文字颜色保护眼睛
- 品牌色链接醒目但不刺眼
- 边框增强卡片层次感

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -108,31 +108,31 @@
             核心价值
           </h2>
           <div class="value-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 30px">
-            <div class="value-card" style="background: #f8f9fa; padding: 30px; border-radius: 12px; text-align: center">
+            <div class="value-card" style="background: #0e1424; padding: 30px; border-radius: 12px; text-align: center; border: 1px solid #2a3a57">
               <div class="value-icon" style="font-size: 3em; margin-bottom: 15px">🎨</div>
-              <h3 data-i18n="aboutValueCreativityTitle" style="font-size: 1.4em; margin-bottom: 15px; color: #333">创意无限</h3>
-              <p data-i18n="aboutValueCreativityDesc" style="color: #666; line-height: 1.6">
+              <h3 data-i18n="aboutValueCreativityTitle" style="font-size: 1.4em; margin-bottom: 15px; color: #e5e7eb">创意无限</h3>
+              <p data-i18n="aboutValueCreativityDesc" style="color: #aab4d4; line-height: 1.6">
                 支持多种AI模型和风格，让您的创意想法以最佳方式呈现
               </p>
             </div>
-            <div class="value-card" style="background: #f8f9fa; padding: 30px; border-radius: 12px; text-align: center">
+            <div class="value-card" style="background: #0e1424; padding: 30px; border-radius: 12px; text-align: center; border: 1px solid #2a3a57">
               <div class="value-icon" style="font-size: 3em; margin-bottom: 15px">🆓</div>
-              <h3 data-i18n="aboutValueFreeTitle" style="font-size: 1.4em; margin-bottom: 15px; color: #333">永久免费</h3>
-              <p data-i18n="aboutValueFreeDesc" style="color: #666; line-height: 1.6">
+              <h3 data-i18n="aboutValueFreeTitle" style="font-size: 1.4em; margin-bottom: 15px; color: #e5e7eb">永久免费</h3>
+              <p data-i18n="aboutValueFreeDesc" style="color: #aab4d4; line-height: 1.6">
                 所有核心功能完全免费，无需注册，无使用限制，让AI创作真正普惠大众
               </p>
             </div>
-            <div class="value-card" style="background: #f8f9fa; padding: 30px; border-radius: 12px; text-align: center">
+            <div class="value-card" style="background: #0e1424; padding: 30px; border-radius: 12px; text-align: center; border: 1px solid #2a3a57">
               <div class="value-icon" style="font-size: 3em; margin-bottom: 15px">🔒</div>
-              <h3 data-i18n="aboutValuePrivacyTitle" style="font-size: 1.4em; margin-bottom: 15px; color: #333">隐私安全</h3>
-              <p data-i18n="aboutValuePrivacyDesc" style="color: #666; line-height: 1.6">
+              <h3 data-i18n="aboutValuePrivacyTitle" style="font-size: 1.4em; margin-bottom: 15px; color: #e5e7eb">隐私安全</h3>
+              <p data-i18n="aboutValuePrivacyDesc" style="color: #aab4d4; line-height: 1.6">
                 您的创作内容不会被存储，所有处理都在云端实时完成，保护您的隐私
               </p>
             </div>
-            <div class="value-card" style="background: #f8f9fa; padding: 30px; border-radius: 12px; text-align: center">
+            <div class="value-card" style="background: #0e1424; padding: 30px; border-radius: 12px; text-align: center; border: 1px solid #2a3a57">
               <div class="value-icon" style="font-size: 3em; margin-bottom: 15px">⚡</div>
-              <h3 data-i18n="aboutValueSpeedTitle" style="font-size: 1.4em; margin-bottom: 15px; color: #333">快速高效</h3>
-              <p data-i18n="aboutValueSpeedDesc" style="color: #666; line-height: 1.6">
+              <h3 data-i18n="aboutValueSpeedTitle" style="font-size: 1.4em; margin-bottom: 15px; color: #e5e7eb">快速高效</h3>
+              <p data-i18n="aboutValueSpeedDesc" style="color: #aab4d4; line-height: 1.6">
                 基于全球CDN部署，毫秒级响应，让您的创作灵感不被等待打断
               </p>
             </div>
@@ -145,18 +145,18 @@
             产品特色
           </h2>
           <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 40px">
-            <div style="background: white; padding: 35px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.1)">
+            <div style="background: #0e1424; padding: 35px; border-radius: 12px; border: 1px solid #2a3a57">
               <h3 data-i18n="aboutFeatureImageTitle" style="font-size: 1.6em; margin-bottom: 15px; color: #667eea">🎨 AI图片生成</h3>
-              <ul style="list-style: none; padding: 0; color: #555; line-height: 2">
+              <ul style="list-style: none; padding: 0; color: #aab4d4; line-height: 2">
                 <li data-i18n="aboutFeatureImagePoint1">✓ 支持FLUX、Turbo等多种AI模型</li>
                 <li data-i18n="aboutFeatureImagePoint2">✓ 多种尺寸和比例选择</li>
                 <li data-i18n="aboutFeatureImagePoint3">✓ 智能提示词优化</li>
                 <li data-i18n="aboutFeatureImagePoint4">✓ 高清图片输出</li>
               </ul>
             </div>
-            <div style="background: white; padding: 35px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.1)">
+            <div style="background: #0e1424; padding: 35px; border-radius: 12px; border: 1px solid #2a3a57">
               <h3 data-i18n="aboutFeatureVoiceTitle" style="font-size: 1.6em; margin-bottom: 15px; color: #764ba2">🎵 AI语音合成</h3>
-              <ul style="list-style: none; padding: 0; color: #555; line-height: 2">
+              <ul style="list-style: none; padding: 0; color: #aab4d4; line-height: 2">
                 <li data-i18n="aboutFeatureVoicePoint1">✓ 6种专业级语音选择</li>
                 <li data-i18n="aboutFeatureVoicePoint2">✓ 自然流畅的语音效果</li>
                 <li data-i18n="aboutFeatureVoicePoint3">✓ 支持长文本合成</li>
