--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -71,67 +71,67 @@
           <!-- 联系方式卡片 -->
           <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 30px; margin-bottom: 60px">
             <!-- 邮箱联系 -->
-            <div style="background: white; padding: 35px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); text-align: center">
+            <div style="background: #0e1424; padding: 35px; border-radius: 12px; border: 1px solid #2a3a57; text-align: center">
               <div style="font-size: 3em; margin-bottom: 15px">📧</div>
-              <h3 data-i18n="contactEmailTitle" style="font-size: 1.4em; margin-bottom: 15px; color: #333">邮箱联系</h3>
+              <h3 data-i18n="contactEmailTitle" style="font-size: 1.4em; margin-bottom: 15px; color: #e5e7eb">邮箱联系</h3>
               <p style="margin-bottom: 15px">
                 <a href="mailto:support@aistone.org" style="color: #667eea; font-size: 1.1em; text-decoration: none; font-weight: 500">support@aistone.org</a>
               </p>
-              <p data-i18n="contactEmailDesc" style="color: #666; font-size: 0.95em">
+              <p data-i18n="contactEmailDesc" style="color: #aab4d4; font-size: 0.95em">
                 我们会在1-2个工作日内回复
               </p>
             </div>
 
             <!-- 在线反馈 -->
-            <div style="background: white; padding: 35px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); text-align: center">
+            <div style="background: #0e1424; padding: 35px; border-radius: 12px; border: 1px solid #2a3a57; text-align: center">
               <div style="font-size: 3em; margin-bottom: 15px">💬</div>
-              <h3 data-i18n="contactFeedbackTitle" style="font-size: 1.4em; margin-bottom: 15px; color: #333">在线反馈</h3>
+              <h3 data-i18n="contactFeedbackTitle" style="font-size: 1.4em; margin-bottom: 15px; color: #e5e7eb">在线反馈</h3>
               <p style="margin-bottom: 15px">
                 <a href="#feedback-form" style="color: #667eea; font-size: 1.1em; text-decoration: none; font-weight: 500" data-i18n="contactFeedbackLink">提交反馈表单</a>
               </p>
-              <p data-i18n="contactFeedbackDesc" style="color: #666; font-size: 0.95em">
+              <p data-i18n="contactFeedbackDesc" style="color: #aab4d4; font-size: 0.95em">
                 快速提交您的问题或建议
               </p>
             </div>
 
             <!-- 社交媒体 -->
-            <div style="background: white; padding: 35px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); text-align: center">
+            <div style="background: #0e1424; padding: 35px; border-radius: 12px; border: 1px solid #2a3a57; text-align: center">
               <div style="font-size: 3em; margin-bottom: 15px">🐦</div>
-              <h3 data-i18n="contactSocialTitle" style="font-size: 1.4em; margin-bottom: 15px; color: #333">社交媒体</h3>
+              <h3 data-i18n="contactSocialTitle" style="font-size: 1.4em; margin-bottom: 15px; color: #e5e7eb">社交媒体</h3>
               <p style="margin-bottom: 15px">
                 <a href="https://twitter.com/aistone_ai" target="_blank" rel="noopener" style="color: #667eea; font-size: 1.1em; text-decoration: none; font-weight: 500">@aistone_ai</a>
               </p>
-              <p data-i18n="contactSocialDesc" style="color: #666; font-size: 0.95em">
+              <p data-i18n="contactSocialDesc" style="color: #aab4d4; font-size: 0.95em">
                 关注我们获取最新动态
               </p>
             </div>
           </div>
 
           <!-- 服务范围 -->
-          <div style="background: #f8f9fa; padding: 50px 40px; border-radius: 12px; margin-bottom: 40px">
-            <h2 data-i18n="contactServicesTitle" style="text-align: center; margin-bottom: 40px; font-size: 2em; color: #333">服务范围</h2>
+          <div style="background: #0e1424; padding: 50px 40px; border-radius: 12px; margin-bottom: 40px; border: 1px solid #2a3a57">
+            <h2 data-i18n="contactServicesTitle" style="text-align: center; margin-bottom: 40px; font-size: 2em; color: #e5e7eb">服务范围</h2>
             <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 30px">
               <div>
                 <h4 data-i18n="contactServiceFeedbackTitle" style="color: #667eea; font-size: 1.2em; margin-bottom: 10px">💡 产品反馈与建议</h4>
-                <p data-i18n="contactServiceFeedbackDesc" style="color: #666; line-height: 1.6">
+                <p data-i18n="contactServiceFeedbackDesc" style="color: #aab4d4; line-height: 1.6">
                   我们非常重视您的体验和意见，任何功能建议或改进想法都欢迎反馈
                 </p>
               </div>
               <div>
                 <h4 data-i18n="contactServiceTechTitle" style="color: #667eea; font-size: 1.2em; margin-bottom: 10px">🔧 技术支持</h4>
-                <p data-i18n="contactServiceTechDesc" style="color: #666; line-height: 1.6">
+                <p data-i18n="contactServiceTechDesc" style="color: #aab4d4; line-height: 1.6">
                   遇到技术问题或使用障碍，请详细描述您的问题，我们会尽快协助解决
                 </p>
               </div>
               <div>
                 <h4 data-i18n="contactServiceBusinessTitle" style="color: #667eea; font-size: 1.2em; margin-bottom: 10px">🤝 商务合作</h4>
-                <p data-i18n="contactServiceBusinessDesc" style="color: #666; line-height: 1.6">
+                <p data-i18n="contactServiceBusinessDesc" style="color: #aab4d4; line-height: 1.6">
                   如果您有商务合作需求，欢迎通过邮箱联系我们
                 </p>
               </div>
               <div>
                 <h4 data-i18n="contactServiceMediaTitle" style="color: #667eea; font-size: 1.2em; margin-bottom: 10px">📰 媒体采访</h4>
-                <p data-i18n="contactServiceMediaDesc" style="color: #666; line-height: 1.6">
+                <p data-i18n="contactServiceMediaDesc" style="color: #aab4d4; line-height: 1.6">
                   媒体朋友如需采访或报道，请提前预约
                 </p>
               </div>
